# QuevedoMP

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  QuevedoMP-SPEC.md  README.md
.devcontainer/: Dockerfile  devcontainer.json  setup-wsl-optix.sh
benchmarks/: bench_collision.cpp  bench_dtc.cpp  bench_harness.hpp
bindings/python/: CMakeLists.txt
bindings/python/quevedomp/: __init__.py
bindings/python/src/: bind_capture.cpp  bind_clearance.cpp  bind_collision.cpp  bind_parameterization.cpp  bind_planning.cpp  bind_robot.cpp  bind_types.cpp  module.cpp
bindings/python/tests/: test_capture.py  test_clearance.py  test_collision.py  test_parameterization.py  test_planning.py  test_prm.py  test_refiner.py  test_robot.py  test_types.py
cmake/: FindOptiX.cmake
docs/: QuevedoMP-BUILD-PLAN.md  QuevedoMP-R7-DESIGN.md  QuevedoMP-ROADMAP-v1.md  optix-collision.md  topp_jerk_tip_spec.md
docs/architecture/: adr-006-rng.md  adr-012-raycast-containment.md  adr-013-padding-and-margins.md  adr-014-optix-batched-raygen.md  adr-015-fk-location.md  adr-016-python-slice-and-studio.md  adr-017-time-parameterization.md  adr-018-clearance-field.md  adr-019-trajectory-refiner.md  adr-020-prm-roadmap-planner.md  adr-021-studio-working-modes.md
docs/benchmarks/: PROTOCOL.md
docs/tutorials/: rrt-tuning.md  testing.md  visualization.md
examples/cpp/: CMakeLists.txt  collision_visualize.cpp  dtc_visualize.cpp  inlet_ik_visualize.cpp  inlet_plan_visualize.cpp  visualize.cpp
examples/python/: inlet_plan_profile.py  session_profile.py
include/quevedomp/capture/: serialize.hpp
include/quevedomp/clearance/: clearance_field.hpp
include/quevedomp/collision/: collision_scene.hpp  edge_check.hpp  edge_discretization.hpp  geometry.hpp  types.hpp
include/quevedomp/core/: mesh_io.hpp  rng.hpp  types.hpp
include/quevedomp/kinematics/: fk.hpp  ik.hpp  jacobian.hpp
include/quevedomp/parameterization/: parameterize.hpp  path_spline.hpp
include/quevedomp/planning/: planner.hpp  refiner.hpp  roadmap.hpp  smoother.hpp  types.hpp
include/quevedomp/robot/: mesh_resolver.hpp  robot_instance.hpp  robot_model.hpp
include/quevedomp/viz/: visualizer.hpp
sessions/: benchmark.qmps
src/capture/: serialize.cpp
src/clearance/: clearance_field.cpp  jfa.cu
src/collision/: collision_scene.cpp  containment.cpp  containment.hpp  edge_check.cpp  edge_discretization.cpp  fcl_scene.cpp  tessellate.cpp  tessellate.hpp
src/collision/optix/: launch_params.hpp  optix_pipeline.cpp  optix_programs.cu  optix_scene.cpp
src/core/: mesh_io.cpp  rng.cpp  types.cpp
src/kinematics/: fk.cpp  ik.cpp  jacobian.cpp
src/parameterization/: parameterize.cpp  path_spline.cpp
src/planning/: planner.cpp  planners_internal.hpp  prm.cpp  rrt_connect.cpp  shortcut_smoother.cpp  trajectory_refiner.cpp  types.cpp
src/robot/: mesh_resolver.cpp  robot_model.cpp
src/viz/: visualizer.cpp
tests/: CMakeLists.txt
tests/fixtures/meshes/: mm_triangle.dae  tri.stl
tests/fixtures/robots/: PROVENANCE.md  rbrobout.urdf  rbrobout_inlet.srdf  rbrobout_inlet.urdf  two_link.urdf  two_link_limits.yaml
tests/fixtures/robots/meshes/dtc_test_inlet/: PROVENANCE.md
tests/fixtures/robots/meshes/dtc_test_inlet/meshes/: dresskit_3_v5.stl  dresskit_4_collision.stl  dresskit_5.stl  dresskit_girado_collision.stl  inlet_mesh_2.stl  jointA_closed_collision_v13.stl  platform_collision.stl  tool_changer_v2.stl  triflex_atrapment_1.stl
tests/fixtures/robots/meshes/ewellix_driver/meshes/: ewellix_lift_base_500mm_collision.stl  ewellix_lift_top_500mm_collision_v2.stl
tests/fuzz/: CMakeLists.txt  README.md  fuzz_urdf.cpp  lsan_suppressions.txt
tests/support/: dtc_scene.hpp
tests/unit/: test_acm_env.cpp  test_bootstrap.cpp  test_capture_serialize.cpp  test_clearance_field.cpp  test_collision_contract.cpp  test_collision_fcl.cpp  test_collision_viz.cpp  test_dtc_scene.cpp  test_edge_discretization.cpp  test_fk.cpp  test_ik.cpp  test_jacobian.cpp  test_mesh_io.cpp  test_mesh_resolver.cpp  test_optix_backend.cpp  test_parameterization.cpp  test_planner.cpp  test_planning_types.cpp  test_prm.cpp  test_refiner.cpp  test_rng.cpp  test_robot_fixtures.cpp  test_robot_meshes.cpp  test_robot_model.cpp  test_robot_robustness.cpp  test_smoother.cpp  test_tessellate.cpp  test_types.cpp  test_viz.cpp
tools/cuda_smoke/: CMakeLists.txt  main.cu
tools/optix_smoke/: CMakeLists.txt  main.cpp
tools/quevedomp-studio/: README.md  pyproject.toml
tools/quevedomp-studio/quevedomp_studio/: __init__.py  __main__.py  app.py  context.py  primitives.py  rerun_log.py  robot_view.py  session.py
tools/quevedomp-studio/quevedomp_studio/modes/: __init__.py  base.py  chomp_params.py  ik.py  plan.py  scene.py  tasks.py  trajectory.py
tools/quevedomp-studio/tests/: test_smoke.py
